adding readMe and Task Swagger
